    function). (Laruence)

- Enchant:
  . Fixed bug #53070 (enchant_broker_get_path crashes if no path is set). (jelle
    van der Waa, cmb)
  . Fixed bug #75365 (Enchant still reports version 1.1.0). (cmb)

- Exif:
  . Fixed bug #75301 (Exif extension has built in revision version). (Peter
    Kokot)

- Fileinfo:
  . Upgrade bundled libmagic to 5.31. (Anatol)

- Opcache:
  . Fixed bug #75370 (Webserver hangs on valid PHP text). (Laruence)
  . Fixed bug #75357 (segfault loading WordPress wp-admin). (Laruence)

- Openssl:
  . Fixed bug #75363 (openssl_x509_parse leaks memory). (Bob)

- Standard:
  . Fixed bug #75221 (Argon2i always throws NUL at the end). (cmb)

- Zlib:
  . Fixed bug #75299 (Wrong reflection on inflate_init and inflate_add). (Fabien
    Villepinte)

12 Oct 2017, PHP 7.2.0RC4

- Core
  . Fixed bug #75220 (Segfault when calling is_callable on parent). 
    (andrewnester)
  . Fixed bug #75290 (debug info of Closures of internal functions contain
    garbage argument names). (Andrea)

- Apache2Handler:
  . Fixed bug #75311 (error: 'zend_hash_key' has no member named 'arKey' in
    apache2handler). (mcarbonneaux)

- Date:
  . Fixed bug #75222 (DateInterval microseconds property always 0). (jhdxr)

- Hash:
  . Fixed Bug #75284 (sha3 is not supported on bigendian machine). (Remi)

- Intl:
  . Fixed bug #75318 (The parameter of UConverter::getAliases() is not
    optional). (cmb)

- litespeed:
  . Fixed bug #75248 (Binary directory doesn't get created when building 
    only litespeed SAPI). (petk)
  . Fixed bug #75251 (Missing program prefix and suffix). (petk)

- OCI8:
  . Fixed incorrect reference counting. (Dmitry, Tianfang Yang)

- Opcache
  . Fixed bug #75255 (Request hangs and not finish). (Dmitry)

- PCRE:
  . Fixed bug #75285 (Broken build when system libpcre don't have jit support).
    (Remi)

- Sodium:
  . Added missing bindings for libsodium > 1.0.13. (Frank)

28 Sep 2017, PHP 7.2.0RC3

- Core